--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,9 +2,7 @@
 @import url("font-awesome.min.css");
 
 /*
-	Overflow by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Varun Soma (@forgottenhacker)
 */
 
 html, body, div, span, applet, object,
